--- a/data-salaries-analysis.ipynb
+++ b/data-salaries-analysis.ipynb
@@ -10,6 +10,24 @@
   },
   {
    "cell_type": "markdown",
+   "id": "db3f97a3-4d92-474c-a90a-44acf2587f7b",
+   "metadata": {},
+   "source": [
+    "## **Funções e bibliotecas necessárias para o projeto**"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "id": "7891a7da-5800-4edb-a6ae-3be7044c48ea",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import pandas as pd"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "ea17bfc8-da11-43ee-a86a-d7f97b16ea53",
    "metadata": {},
    "source": [
@@ -160,8 +178,287 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "id": "08b140fd-cc33-475f-baaa-475859aea7c8",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df = pd.read_csv(r'data\\jobs_in_data.csv', sep=',')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "id": "857924bf-d179-4c74-9859-5b2ecdcbf476",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>work_year</th>\n",
+       "      <th>job_title</th>\n",
+       "      <th>job_category</th>\n",
+       "      <th>salary_currency</th>\n",
+       "      <th>salary</th>\n",
+       "      <th>salary_in_usd</th>\n",
+       "      <th>employee_residence</th>\n",
+       "      <th>experience_level</th>\n",
+       "      <th>employment_type</th>\n",
+       "      <th>work_setting</th>\n",
+       "      <th>company_location</th>\n",
+       "      <th>company_size</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>2023</td>\n",
+       "      <td>Data DevOps Engineer</td>\n",
+       "      <td>Data Engineering</td>\n",
+       "      <td>EUR</td>\n",
+       "      <td>88000</td>\n",
+       "      <td>95012</td>\n",
+       "      <td>Germany</td>\n",
+       "      <td>Mid-level</td>\n",
+       "      <td>Full-time</td>\n",
+       "      <td>Hybrid</td>\n",
+       "      <td>Germany</td>\n",
+       "      <td>L</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>2023</td>\n",
+       "      <td>Data Architect</td>\n",
+       "      <td>Data Architecture and Modeling</td>\n",
+       "      <td>USD</td>\n",
+       "      <td>186000</td>\n",
+       "      <td>186000</td>\n",
+       "      <td>United States</td>\n",
+       "      <td>Senior</td>\n",
+       "      <td>Full-time</td>\n",
+       "      <td>In-person</td>\n",
+       "      <td>United States</td>\n",
+       "      <td>M</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>2023</td>\n",
+       "      <td>Data Architect</td>\n",
+       "      <td>Data Architecture and Modeling</td>\n",
+       "      <td>USD</td>\n",
+       "      <td>81800</td>\n",
+       "      <td>81800</td>\n",
+       "      <td>United States</td>\n",
+       "      <td>Senior</td>\n",
+       "      <td>Full-time</td>\n",
+       "      <td>In-person</td>\n",
+       "      <td>United States</td>\n",
+       "      <td>M</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>2023</td>\n",
+       "      <td>Data Scientist</td>\n",
+       "      <td>Data Science and Research</td>\n",
+       "      <td>USD</td>\n",
+       "      <td>212000</td>\n",
+       "      <td>212000</td>\n",
+       "      <td>United States</td>\n",
+       "      <td>Senior</td>\n",
+       "      <td>Full-time</td>\n",
+       "      <td>In-person</td>\n",
+       "      <td>United States</td>\n",
+       "      <td>M</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>2023</td>\n",
+       "      <td>Data Scientist</td>\n",
+       "      <td>Data Science and Research</td>\n",
+       "      <td>USD</td>\n",
+       "      <td>93300</td>\n",
+       "      <td>93300</td>\n",
+       "      <td>United States</td>\n",
+       "      <td>Senior</td>\n",
+       "      <td>Full-time</td>\n",
+       "      <td>In-person</td>\n",
+       "      <td>United States</td>\n",
+       "      <td>M</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   work_year             job_title                    job_category  \\\n",
+       "0       2023  Data DevOps Engineer                Data Engineering   \n",
+       "1       2023        Data Architect  Data Architecture and Modeling   \n",
+       "2       2023        Data Architect  Data Architecture and Modeling   \n",
+       "3       2023        Data Scientist       Data Science and Research   \n",
+       "4       2023        Data Scientist       Data Science and Research   \n",
+       "\n",
+       "  salary_currency  salary  salary_in_usd employee_residence experience_level  \\\n",
+       "0             EUR   88000          95012            Germany        Mid-level   \n",
+       "1             USD  186000         186000      United States           Senior   \n",
+       "2             USD   81800          81800      United States           Senior   \n",
+       "3             USD  212000         212000      United States           Senior   \n",
+       "4             USD   93300          93300      United States           Senior   \n",
+       "\n",
+       "  employment_type work_setting company_location company_size  \n",
+       "0       Full-time       Hybrid          Germany            L  \n",
+       "1       Full-time    In-person    United States            M  \n",
+       "2       Full-time    In-person    United States            M  \n",
+       "3       Full-time    In-person    United States            M  \n",
+       "4       Full-time    In-person    United States            M  "
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "id": "4e732443-701c-4a3a-abae-e6a330f59ea3",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'pandas.core.frame.DataFrame'>\n",
+      "RangeIndex: 9355 entries, 0 to 9354\n",
+      "Data columns (total 12 columns):\n",
+      " #   Column              Non-Null Count  Dtype \n",
+      "---  ------              --------------  ----- \n",
+      " 0   work_year           9355 non-null   int64 \n",
+      " 1   job_title           9355 non-null   object\n",
+      " 2   job_category        9355 non-null   object\n",
+      " 3   salary_currency     9355 non-null   object\n",
+      " 4   salary              9355 non-null   int64 \n",
+      " 5   salary_in_usd       9355 non-null   int64 \n",
+      " 6   employee_residence  9355 non-null   object\n",
+      " 7   experience_level    9355 non-null   object\n",
+      " 8   employment_type     9355 non-null   object\n",
+      " 9   work_setting        9355 non-null   object\n",
+      " 10  company_location    9355 non-null   object\n",
+      " 11  company_size        9355 non-null   object\n",
+      "dtypes: int64(3), object(9)\n",
+      "memory usage: 877.2+ KB\n"
+     ]
+    }
+   ],
+   "source": [
+    "df.info()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "id": "e0d35e22-94c4-45e3-bdba-3c9cba501f21",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "42.91% do Dataframe possui registros duplicados\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(f\"{df.duplicated().sum() / df['work_year'].count():.2%} do Dataframe possui registros duplicados\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "3475b64b-b4b6-41d2-a956-a8d8a1d3b8d2",
+   "metadata": {},
+   "source": [
+    "**Diagnóstico de qualidade dos dados**\n",
+    "\n",
+    "    Não há valores ausentes ou nulos.\n",
+    "\n",
+    "    Existem duplicados (≈43%), mas decidi mantê-los pois é perfeitamente possível termos mesmos valores para indivíduos diferentes neste cenário.\n",
+    "\n",
+    "    'salary_in_usd' será a métrica principal."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "c8c95c68-c97e-4bf4-8059-f136df6b8b9f",
+   "metadata": {},
+   "source": [
+    "### **3.0 - Preparação dos Dados**"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "id": "a71c9784-f463-4dd9-b662-dbb7bfafdc82",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'pandas.core.frame.DataFrame'>\n",
+      "RangeIndex: 9355 entries, 0 to 9354\n",
+      "Data columns (total 12 columns):\n",
+      " #   Column              Non-Null Count  Dtype  \n",
+      "---  ------              --------------  -----  \n",
+      " 0   work_year           9355 non-null   int64  \n",
+      " 1   job_title           9355 non-null   object \n",
+      " 2   job_category        9355 non-null   object \n",
+      " 3   salary_currency     9355 non-null   object \n",
+      " 4   salary              9355 non-null   float64\n",
+      " 5   salary_in_usd       9355 non-null   float64\n",
+      " 6   employee_residence  9355 non-null   object \n",
+      " 7   experience_level    9355 non-null   object \n",
+      " 8   employment_type     9355 non-null   object \n",
+      " 9   work_setting        9355 non-null   object \n",
+      " 10  company_location    9355 non-null   object \n",
+      " 11  company_size        9355 non-null   object \n",
+      "dtypes: float64(2), int64(1), object(9)\n",
+      "memory usage: 877.2+ KB\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Alterando o tipo de dado nas colunas: 'salary', 'salary_in_usd'\n",
+    "df['salary'] = df['salary'].astype('float64')\n",
+    "df['salary_in_usd'] = df['salary_in_usd'].astype('float64')\n",
+    "\n",
+    "df.info()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "d2c2b7a3-eed5-4776-80ad-d3d80868e209",
    "metadata": {},
    "outputs": [],
    "source": []
